# trek-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  cliff.toml  install.ps1  install.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  version
.github/workflows/: cache-cleanup.yml  release.yml  test.yml
crates/trek/: Cargo.toml  build.rs
crates/trek-configuration/: Cargo.toml
crates/trek-configuration/src/: lib.rs
crates/trek-fxmanifest/: Cargo.toml
crates/trek-fxmanifest/benches/: parse_bench.rs
crates/trek-fxmanifest/src/: ast.rs  lexer.rs  lib.rs  parser.rs  source.rs
crates/trek-fxmanifest/tests/: parse_test.rs
crates/trek-log/: Cargo.toml
crates/trek-log/src/: lib.rs
crates/trek-scripts/: Cargo.toml
crates/trek-scripts/src/: lib.rs
crates/trek-wasm/: Cargo.toml
crates/trek/src/: banner.rs  browser.rs  cli.rs  config.rs  log.rs  login.rs  main.rs  scripts.rs  update.rs
crates/trek/src/api/: auth_api.rs  check_pin_api.rs  config_api.rs  ip_filter_api.rs  mod.rs  proxy_api.rs  release_api.rs  scripts_api.rs  theme_api.rs
crates/trek/src/server/: auth_api.rs  check_pin.rs  config_api.rs  health.rs  ip_filter.rs  mod.rs  proxy.rs  proxy_api.rs  router.rs  scripts_api.rs  theme_api.rs
docs/: index.mdx  meta.json
git-cliff/: CHANGELOG.md
npm/: justfile
npm/trek-cli/: package.json
npm/trek-linux-arm64/: package.json
npm/trek-linux-x64/: package.json
npm/trek-win32-x64/: package.json
npm/trek-windows-arm64/: package.json
npm/trek-windows-x64/: package.json
scripts/: bump-version.sh  compute-version.js  copy-binaries.sh  generate-checksums.sh  generate-packages.ts  inject-app-version.js  prepare-tarball.sh  update-cargo-lock.py
