[workspace]
resolver = "2"
members = ["./crates/trek", "./crates/trek-wasm", "./crates/trek-fxmanifest"]

[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.6.1", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
semver = "1.0"
anyhow = "1.0"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
bytes = "1"
http-body-util = "0.1"
trek-fxmanifest = { path = "crates/trek-fxmanifest" }

[workspace.lints]
rust = {}

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
