[package]
name = "trek"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
axum.workspace = true
colorgrad.workspace = true
tokio = { version = "1", default-features = false, features = [
  "rt",
  "net",
  "time",
  "io-util",
  "macros",
] }
# only used by the debug Vite proxy (proxy.rs #[cfg(debug_assertions)])
hyper = { version = "1.0", default-features = false, features = ["http1", "client"] }
hyper-util = { version = "0.1", default-features = false, features = [
  "tokio",
  "client-legacy",
  "http1",
] }
utoipa = { version = "5", optional = true }
utoipa-swagger-ui = { version = "8", default-features = false, features = [
  "axum",
], optional = true }
bytes.workspace = true
http-body-util.workspace = true
rust-embed = { version = "8.11", default-features = false }
serde = { workspace = true, features = ["derive"] }
trek-configuration = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
serde_json.workspace = true
semver.workspace = true
trek-scripts = { workspace = true }

[features]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
release-embed = ["rust-embed/compression"]
